<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.college.safety247.MainActivity">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/s5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingBottom="30dp"
        android:text="Login to your account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />


    <EditText
        android:id="@+id/user_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_white_transparent"
        android:hint="@string/user"
        android:inputType="text"
        android:padding="8dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_white_transparent"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="8dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:typeface="normal" />

    <com.andexert.library.RippleView
        android:id="@+id/rippleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_red"
            android:onClick="loginbuttonClicked"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.andexert.library.RippleView>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="signUpButtonClicked">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not already a member ? "
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underlined_signup"
            android:textColor="#a1c5ff"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signUpButtonClicked"
            android:text=" here."
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>
